turbopack/crates/turbo-tasks-macros-tests/tests/derive_non_local_value/fail_contains_vc_inside_generic.rs
#![allow(dead_code)]

use turbo_tasks::{NonLocalValue, Vc};

#[derive(NonLocalValue)]
struct ContainsVcInsideGeneric {
    a: Option<Box<[Vc<i32>; 4]>>,
}

fn main() {}
